[package]
name = "pallet-evm-precompile-dispatch"
version = "2.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "DISPATCH precompiles for EVM pallet."
repository = "https://github.com/paritytech/frontier/"

[dependencies]
# Substrate FRAME
frame-support = { version = "4.0.0-dev", git = "https://github.com/zeitgeistpm/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }

# Frontier
fp-evm = { version = "3.0.0-dev", path = "../../../../primitives/evm", default-features = false }
pallet-evm = { version = "6.0.0-dev", path = "../..", default-features = false }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

sp-core = { version = "6.0.0", git = "https://github.com/zeitgeistpm/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
sp-io = { version = "6.0.0", git = "https://github.com/zeitgeistpm/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
sp-runtime = { version = "6.0.0", git = "https://github.com/zeitgeistpm/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
sp-std = { version = "4.0.0", git = "https://github.com/zeitgeistpm/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }

frame-system = { version = "4.0.0-dev", git = "https://github.com/zeitgeistpm/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/zeitgeistpm/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
pallet-timestamp = { version = "4.0.0-dev", git = "https://github.com/zeitgeistpm/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }
pallet-utility = { version = "4.0.0-dev", git = "https://github.com/zeitgeistpm/substrate", default-features = false , branch = "moonbeam-polkadot-v0.9.29" }

[features]
default = ["std"]
std = [
	# Substrate FRAME
	"frame-support/std",
	# Frontier
	"fp-evm/std",
	"pallet-evm/std",
]
